[package]
name = "xsys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = { version = "4.5.0", features = ["derive"] }
notify-rust = "4.10.0"
reqwest = { version = "0.11.24", features = ["blocking"] }
rss = { version = "2.0.7", features = ["atom"] }
log = "0.4.20"
fern = "0.6.2"
chrono = "0.4.33"
